--- a/services/demo-api-gateway/package.json
+++ b/services/demo-api-gateway/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "demo-service-1",
+  "name": "demo-api-gateway",
   "version": "0.1.0",
   "bin": {
-    "demo-service-1": "bin/demo-service-1.js"
+    "demo-api-gateway": "bin/demo-api-gateway.js"
   },
   "scripts": {
     "build": "tsc",
@@ -14,10 +14,9 @@
     "@types/jest": "^27.5.2",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "2.41.0",
-    "esbuild": "^0.16.12",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
+    "aws-cdk": "2.41.0",
     "ts-node": "^10.9.1",
     "typescript": "~3.9.7"
   },
